RESOLVED FIXED29759
REGRESSION (r48775) FontList.plist written by TOT WebKit causes Safari 4 to crash on launch
https://bugs.webkit.org/show_bug.cgi?id=29759
Summary REGRESSION (r48775) FontList.plist written by TOT WebKit causes Safari 4 to c...
mitz
Reported 2009-09-25 21:44:01 PDT
The FontList.plist written by WebKit after <http://trac.webkit.org/changeset/48775> causes the Safari 4 to crash on launch (because it hands it off to CG which fails to populate its font database from it).
Attachments
Revert to saving the CG font DB property list at the root of FontList.plist (3.60 KB, patch)
2009-09-25 23:39 PDT, mitz
sam: review+
mitz
Comment 1 2009-09-25 23:39:56 PDT
Created attachment 40164 [details] Revert to saving the CG font DB property list at the root of FontList.plist
mitz
Comment 2 2009-09-25 23:45:04 PDT
Fixed in <http://trac.webkit.org/projects/webkit/changeset/48787>. If you have used any build between r48775 and r48787, you will need to delete FontList.plist in order to not crash on launch.
Note You need to log in before you can comment on or make changes to this bug.