REGRESSION (r48775) FontList.plist written by TOT WebKit causes Safari 4 to crash on launch https://bugs.webkit.org/show_bug.cgi?id=29759

Reviewed by Sam Weinig.

* platform/graphics/win/FontDatabase.cpp:
(WebCore::writeFontDatabaseToPlist): Reverted to saving the CG font DB
property list at the root of FontList.plist, but with an additional
key for the last value of the Fonts registry key.
(WebCore::populateFontDatabase): Pass the FontList.plist in its entirety
to populatFontDatabaseFromPlist.



Canonical link: https://commits.webkit.org/40350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48787 268f45cc-cd09-0410-ab3c-d52691b4dbfc